--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -574,7 +574,12 @@
                     <span>My Jobs</span>
                 </a>
   
-           
+                <a href="{% url 'chat_list' %}" class="nav-link">
+                    <span>💬 Chat </span>
+                    {% if unread_messages %}
+                        <span class="badge">{{ unread_messages|length }}</span>
+                    {% endif %}
+                </a>
             </nav>
         </div>
 
@@ -589,7 +594,7 @@
                     </a>
                 </div>
             </div>
-            
+            <h1>Welcome <span>{{ user.username }}</span></h1>
             <main>
                 {% block content %}
                 <!-- Content will be injected here -->
