--- a/Student_Jobsite/Pages/templates/post_job.html
+++ b/Student_Jobsite/Pages/templates/post_job.html
@@ -57,7 +57,7 @@
   .form-label {
     display: block;
     font-weight: 600;
-    color: #020407;;
+    color: #020407;
     margin-bottom: 0.75rem;
     font-size: 0.95rem;
     letter-spacing: 0.3px;
